Fixed a bug with monaco editor popup that was cut off.

--- a/src/app/vizual-rx-player/vizual-rx-player.component.scss
+++ b/src/app/vizual-rx-player/vizual-rx-player.component.scss
@@ -5,6 +5,7 @@
   display: flex;
   border: $player-component-border;
   border-radius: $player-component-border-radius;
+  overflow: auto;
 
   .error-panel {
     height: 100%;
