--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,7 +3,7 @@
 @include mat.core();
 
 $primary: mat.define-palette(mat.$teal-palette);
-$accent: mat.define-palette(mat.$deep-purple-palette);
+$accent: mat.define-palette(mat.$blue-palette);
 $theme: mat.define-light-theme(
     (color: (
       primary: $primary,
